--- a/src/client/styles/base/base.scss
+++ b/src/client/styles/base/base.scss
@@ -2,7 +2,17 @@
     font-size: 62.5%; // 10 / 16 = 0.625
 }
 
+// Setting the width and height of the html and body elements is necessary for
+// the main grid to work as intended
+// See https://dev.to/niorad/keeping-the-footer-at-the-bottom-with-css-grid-15mf
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     background-color: $orange-yellow-crayola;
     color: $oxford-blue;
+    width: 100%;
+    height: 100%;
 }
