--- a/src/client/styles/base/typography.scss
+++ b/src/client/styles/base/typography.scss
@@ -46,3 +46,16 @@ input {
     font-size: 1.6rem;
     line-height: 1.5em;
 }
+
+@media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 5.4rem;
+        line-height: 1.5em;
+    }
+
+    h2 {
+        font-size: 2.4rem;
+        line-height: 1.5rem;
+        margin-bottom: 1.6rem;
+    }
+}
