--- a/src/client/styles/layout/header.scss
+++ b/src/client/styles/layout/header.scss
@@ -2,10 +2,17 @@
     margin: 1rem auto;
     min-width: 20rem;
     max-width: 80%;
+    h1 {
+        margin-left: 0.5rem;
+    }
 }
 
 @media only screen and (min-width: 768px) {
     .header {
         width: 80%;
+
+        h1 {
+            margin-left: 3.7rem;
+        }
     }
 }
