--- a/src/client/styles/components/form.scss
+++ b/src/client/styles/components/form.scss
@@ -8,6 +8,18 @@
     padding: 0 3.2rem 4rem 3.2rem;
     margin-top: 1.6rem;
 
+    &__label {
+        font-size: 1.6rem;
+        font-weight: 500;
+        line-height: 1.5em;
+        letter-spacing: 0.1rem;
+        margin-left: 0.5rem;
+
+        &--fallback {
+            margin-bottom: 0.5rem;
+        }
+    }
+
     &__field {
         display: flex;
         flex-flow: column nowrap;
@@ -15,10 +27,6 @@
         width: 100%;
         min-width: 20rem;
         max-width: 30rem;
-
-        label {
-            margin-left: 0.5rem;
-        }
 
         input {
             padding: 0.5rem;
@@ -48,6 +56,12 @@
     &__select {
         display: flex;
         flex-flow: column nowrap;
+
+        select {
+            font-size: 1.6rem;
+            line-height: 1.2rem;
+            padding: 0 0.5rem;
+        }
     }
 
     &__submit {
@@ -111,11 +125,17 @@
     }
 }
 
-@media only screen and (min-width: 1124px) {
+@media only screen and (min-width: 1444px) {
     .form {
         grid-template:
             'errors      errors    errors  errors' 1fr
             'destination startDate endDate submit' 1fr / 2fr 1fr 1fr 1fr;
+
+        &__select {
+            &:nth-child(3n + 0) {
+                margin-right: 1rem;
+            }
+        }
 
         &__submit {
             align-self: end;
