--- a/src/client/styles/components/weather.scss
+++ b/src/client/styles/components/weather.scss
@@ -176,7 +176,7 @@
 @media only screen and (min-width: 1444px) {
     .weather {
         &__card {
-            max-width: 30rem;
+            max-width: 100%;
 
             &--current {
                 box-sizing: border-box;
