feat: Add styles to the footer
The footer now has complete styles. Also the issue with the position of
the footer on some browsers has been fixed.

--- a/src/client/styles/layout/layout.scss
+++ b/src/client/styles/layout/layout.scss
@@ -1,3 +1,12 @@
+.container {
+    position: relative;
+    min-height: 100%;
+}
+
+main {
+    padding-bottom: 5.4rem;
+}
+
 .tripSelection,
 .newTrip {
     min-width: 20rem;
@@ -20,6 +29,8 @@
 }
 
 .newTrip {
+    padding-bottom: 8.1rem;
+
     &__header {
         margin: 0 auto;
         width: 100%;
@@ -33,6 +44,7 @@
 @media only screen and (min-width: 768px) {
     main {
         min-height: 80vh;
+        padding-bottom: 8.1rem;
     }
 
     .tripSelection {
