refactor: Refactor weatherViewUpdater into smaller functions
The module weatherViewUpdater had very big functions and many repeated
lines of code in the creation of html elements. It has been broken down
into smaller functions to make it more understandable and prevent code
repetition.

--- a/src/client/styles/components/weather.scss
+++ b/src/client/styles/components/weather.scss
@@ -48,11 +48,11 @@
             margin-bottom: 0.5rem;
         }
 
-        &--real {
+        &--left {
             grid-area: left;
         }
 
-        &--feels {
+        &--right {
             grid-area: right;
         }
 
@@ -96,14 +96,16 @@
             }
         }
     }
-}
 
-.icon--active {
-    color: $cadet-blue;
-    cursor: pointer;
+    &__icon {
+        &--active {
+            color: $cadet-blue;
+            cursor: pointer;
 
-    &:hover {
-        color: $french-raspberry;
+            &:hover {
+                color: $french-raspberry;
+            }
+        }
     }
 }
 
