--- a/src/client/styles/layout/layout.scss
+++ b/src/client/styles/layout/layout.scss
@@ -4,7 +4,7 @@
 }
 
 main {
-    padding-bottom: 5.4rem;
+    padding-bottom: 8.1rem;
 }
 
 .tripSelection,
@@ -44,7 +44,7 @@ main {
 @media only screen and (min-width: 768px) {
     main {
         min-height: 80vh;
-        padding-bottom: 8.1rem;
+        //padding-bottom: 8.1rem;
     }
 
     .tripSelection {
