--- a/src/client/styles/layout/footer.scss
+++ b/src/client/styles/layout/footer.scss
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 9.6rem;
+    height: 13.2rem;
     background-color: $oxford-blue;
     color: $cadet-blue;
     text-align: center;
@@ -16,6 +16,25 @@
         &:hover {
             color: $magnolia;
             text-decoration: underline solid;
+        }
+    }
+
+    &__credits {
+        padding: 0 1rem 1rem 1rem;
+        display: flex;
+        flex-flow: column nowrap;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .footer {
+        height: 10.6rem;
+
+        &__credits {
+            padding-top: 1rem;
+            text-align: left;
+            flex-flow: row nowrap;
+            justify-content: space-around;
         }
     }
 }
