--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -142,17 +142,55 @@
                 </section>
             </main>
             <footer class="footer">
-                <p>
-                    Airplane icon made by
-                    <a href="https://www.freepik.com" title="Freepik"
-                        >Freepik</a
-                    >
-                    from
-                    <a href="https://www.flaticon.com/" title="Flaticon"
-                        >www.flaticon.com</a
-                    >
-                </p>
-                <p>&copy; Pablo Asencio Sánchez</p>
+                <div class="footer__credits">
+                    <div class="footer__credits--apis">
+                        <p>
+                            Geographical data provided by
+                            <a href="https://www.geonames.org/">GeoNames</a>
+                        </p>
+                        <p>
+                            Weather data provided by
+                            <a href="https://www.weatherbit.io/"
+                                >weatherbit.io</a
+                            >
+                        </p>
+                        <p>
+                            Images provided by
+                            <a href="https://pixabay.com/">Pixabay</a>
+                        </p>
+                    </div>
+                    <div class="footer__credits--icons">
+                        <p>
+                            <a
+                                href="https://erikflowers.github.io/weather-icons/"
+                                >Weather Icons</a
+                            >
+                            by
+                            <a href="http://www.twitter.com/erik_flowers"
+                                >Erik Flowers</a
+                            >
+                            and
+                            <a href="http://www.twitter.com/artill"
+                                >Lukas Bischoff</a
+                            >
+                        </p>
+                        <p>
+                            Calendar and airplane icons made by
+                            <a href="https://www.freepik.com" title="Freepik"
+                                >Freepik</a
+                            >
+                            from
+                            <a href="https://www.flaticon.com/" title="Flaticon"
+                                >www.flaticon.com</a
+                            >
+                        </p>
+                        <p>
+                            Spinner made by
+                            <a href="https://loading.io/spinner/">Loading.io</a>
+                        </p>
+                    </div>
+                </div>
+                <p>&copy; 2021 Pablo Asencio Sánchez</p>
             </footer>
         </div>
     </body>
