feat: Hide the newTrip element on first load

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -70,76 +70,7 @@
                         />
                     </form>
                 </section>
-                <section id="newTrip" class="newTrip">
-                    <header class="newTrip__header">
-                        <h2>Your new trip</h2>
-                    </header>
-                    <article class="trip">
-                        <header class="trip__header">
-                            <h3
-                                class="trip__header--destination"
-                                id="newTrip__destination"
-                            >
-                                Destination
-                            </h3>
-                            <p
-                                class="trip__header--country"
-                                id="newTrip__country"
-                            >
-                                Province, COUNTRY
-                            </p>
-                        </header>
-                        <div class="photo" id="newTrip__photo">
-                            <p
-                                class="photo__error error"
-                                id="newTrip__photo--error"
-                            ></p>
-                            <figure class="photo__figure">
-                                <img class="photo__img" src="" alt="" />
-                                <figcaption
-                                    class="photo__caption"
-                                    id="newTrip__photo--caption"
-                                ></figcaption>
-                            </figure>
-                        </div>
-                        <section class="time">
-                            <div
-                                class="time__icon time__icon--calendar"
-                                aria-hidden="true"
-                            ></div>
-                            <p class="time__daysToTrip">
-                                Your trip is
-                                <span id="newTrip__daysToTrip">in 0 days</span>
-                            </p>
-                            <p class="time__date time__date--start">
-                                <span class="time__label">From: </span
-                                ><span id="newTrip__startDate"></span>
-                            </p>
-                            <p class="time__date time__date--end">
-                                <span class="time__label">To: </span
-                                ><span id="newTrip__endDate"></span>
-                            </p>
-                            <p class="time__duration">
-                                <span class="time__label"
-                                    >Duration of the trip:</span
-                                >
-                                <span id="newTrip__duration">1 day</span>
-                            </p>
-                            <div
-                                class="time__icon--airplane time__icon"
-                                aria-hidden="true"
-                            ></div>
-                        </section>
-                        <section
-                            id="newTrip__weather--current"
-                            class="weather weather--current"
-                        ></section>
-                        <section
-                            id="newTrip__weather--forecast"
-                            class="weather weather--forecast"
-                        ></section>
-                    </article>
-                </section>
+                <section id="newTrip" class="newTrip"></section>
             </main>
             <footer class="footer">
                 <div class="footer__credits">
