--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,7 +15,7 @@
                 <h1>Travel App</h1>
             </header>
             <main>
-                <section class="tripSelection">
+                <section class="tripSelection" id="tripSelection">
                     <header class="tripSelection__header">
                         <h2>Where do you want to travel next?</h2>
                     </header>
