chore: Change some text in index.html

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -65,7 +65,7 @@
                         <input
                             class="form__submit"
                             type="submit"
-                            value="Submit"
+                            value="Go!"
                             id="tripSelection__submit"
                         />
                     </form>
@@ -114,10 +114,6 @@
                             <a href="https://www.flaticon.com/" title="Flaticon"
                                 >www.flaticon.com</a
                             >
-                        </p>
-                        <p>
-                            Spinner made by
-                            <a href="https://loading.io/spinner/">Loading.io</a>
                         </p>
                     </div>
                 </div>
