--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -120,5 +120,14 @@
                 <p>&copy; 2021 Pablo Asencio Sánchez</p>
             </footer>
         </div>
+        <script>
+            // Check that service workers are supported
+            if ('serviceWorker' in navigator) {
+                // Use the window load event to keep the page load performant
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+        </script>
     </body>
 </html>
