--- a/src/client/styles/components/weather.scss
+++ b/src/client/styles/components/weather.scss
@@ -107,6 +107,13 @@
             }
         }
     }
+
+    &__error {
+        color: $french-raspberry;
+        font-size: 1.6rem;
+        line-height: 1.5em;
+        margin-left: 3rem;
+    }
 }
 
 @media only screen and (min-width: 768px) {
